Changed width of name column to 200

--- a/dd.aclabs.1.2015/src/main/resources/static/partials/listFeedback.html
+++ b/dd.aclabs.1.2015/src/main/resources/static/partials/listFeedback.html
@@ -10,7 +10,7 @@
 		</thead>
 		<tbody>
 			<tr ng-repeat="feedback in feedbacks">
-				<td>{{feedback.name}}</td>
+				<td width="200">{{feedback.name}}</td>
 				<td>{{feedback.message}}</td>
 				<td width="30">
 					<a ng-click="removeFeedback(feedback.id)">
